docs: add swagger docs for delete email route
